[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/import_progress_panel.gd" type="Script" id=1]
[ext_resource path="res://ui/loading_circle.tscn" type="PackedScene" id=2]

[node name="ImportProgressPanel" type="PanelContainer"]
margin_right = 450.0
margin_bottom = 110.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 443.0
margin_bottom = 103.0

[node name="LoadingCircle" parent="HBoxContainer" instance=ExtResource( 2 )]
margin_bottom = 96.0
rect_min_size = Vector2( 100, 0 )

[node name="ProgressContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 104.0
margin_right = 436.0
margin_bottom = 96.0
size_flags_horizontal = 3
alignment = 1

[node name="PackLabel" type="Label" parent="HBoxContainer/ProgressContainer"]
margin_top = 26.0
margin_right = 332.0
margin_bottom = 46.0
text = "Initializingâ€¦"
align = 1
clip_text = true

[node name="PackProgress" type="ProgressBar" parent="HBoxContainer/ProgressContainer"]
margin_top = 50.0
margin_right = 332.0
margin_bottom = 70.0

[node name="FileLabel" type="Label" parent="HBoxContainer/ProgressContainer"]
visible = false
margin_top = 50.0
margin_right = 332.0
margin_bottom = 70.0
align = 1
clip_text = true

[node name="FileProgress" type="ProgressBar" parent="HBoxContainer/ProgressContainer"]
visible = false
margin_top = 62.0
margin_right = 332.0
margin_bottom = 82.0
